--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: homepage
 title: Mere Blog Theme
 subtitle: This is the demo site for the Mere Blog Theme
-image: /img/home.jpg
-hero_image: /img/home.jpg
+image: /img/20160907_1.jpg
+hero_image: /img/20160907_1.jpg
 hero_height: is-large
 ---
 
